--- a/gondex.html
+++ b/gondex.html
@@ -4291,7 +4291,7 @@
             clicked--
 
         }
-        clicked = 1
+        // clicked = 1
         if (AI == 1) {
 
             if (clicked == 1) {
