--- a/gondex.html
+++ b/gondex.html
@@ -3190,7 +3190,8 @@
                     }
                 }
             }
-            if(AI != 1 && boole){
+            if(boole){
+            // if(AI != 1 && boole){
                 stonecollapse.play()
             }
 
