--- a/gondex.html
+++ b/gondex.html
@@ -4,6 +4,16 @@
 
 <head>
     <!-- <link rel="stylesheet" href="styles.css"> -->
+
+    <style> 
+        ::-webkit-scrollbar {
+        display: none;
+    }
+        html, body, div, canvas {
+          margin: 0;
+          padding: 0;
+      }
+      </style>
 </head>
 
 <canvas style="touch-action: none;"  id="realcanvas" width="1280" height="850" class="canvas"></canvas>
